# android-spatialite

./: .classpath  .gitignore  .project  AndroidManifest.xml  README.md  README.mk  setup.sh
jni/: .gitignore  Android.mk
jni/javasqlite-20110106/: Makefile.in  db  db3  javasqlite.mak  javasqlite23.mak  javasqlite3-dll.mak  javasqlite3-see.mak  javasqlite3.mak
jni/javasqlite-20110106/SQLite/JDBC2y/: JDBCPreparedStatement.java
jni/javasqlite-20110106/SQLite/JDBC2z/: JDBCDatabaseMetaData.java
jni/javasqlite-20110106/debian/: changelog  rules
jni/javasqlite-20110106/doc/: ChangeLog  allclasses-frame.html  allclasses-noframe.html  constant-values.html  index.html  overview-summary.html  overview-tree.html  overview.html  packages.html  serialized-form.html  title.html
jni/javasqlite-20110106/doc/SQLite/: Authorizer.html  Backup.html  Blob.html  BlobR.html  BlobW.html  BusyHandler.html  Callback.html  Constants.html  Database.html  Exception.html  Function.html  FunctionContext.html  Profile.html  ProgressHandler.html  Stmt.html  StringEncoder.html  TableResult.html  Trace.html  Vm.html  package-frame.html  package-summary.html  package-tree.html
jni/javasqlite-20110106/native/: sqlite_jni.c
jni/libspatialite-amalgamation-2.3.1/: AUTHORS  README  makefile.vc  nmake.opt  spatialite.c
jni/libspatialite-amalgamation-2.3.1/headers/: Makefile.in
libiconv-1.13.1/libcharset/lib/: localcharset.c
libspatialite-amalgamation-2.3.1/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libspatialite.def  spatialite.c  spatialite.pc.in
libspatialite-amalgamation-2.3.1/headers/: Makefile.am
res/values/: strings.xml
src/SQLite/: Constants.java  Database.java
src/SQLite/JDBC2/: JDBCPreparedStatement.java  JDBCStatement.java
src/SQLite/JDBC2x/: JDBCPreparedStatement.java
src/SQLite/JDBC2y/: JDBCDatabaseMetaData.java  JDBCStatement.java
src/SQLite/JDBC2z/: JDBCPreparedStatement.java  JDBCStatement.java
src/com/bitgrind/android/: SpatialiteTestActivity.java
src/jsqlite/: Benchmark.java  Database.java  JDBCDriver.java  SQLDump.java  SQLRestore.java  Shell.java
